feat: add transfer sort; fix: transferpagination; redesign: big nose

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link  rel="icon" type="image/png" href="/src/assets/wall-8-high-resolution-logo-white-on-black-background.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/wall-8-high-resolution-logo-white-on-black-background.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wall-8</title>
   </head>
-  <body >
+  <body>
     <div id="root"></div>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
